mentors view updated and route added for mentors index

--- a/app/views/mentors/index.html.erb
+++ b/app/views/mentors/index.html.erb
@@ -1,4 +1,4 @@
-<p><strong>Mentors Table%></p> 
+<p><strong>Mentors Table</p> 
 
 <% @mentors.each do |mentor| %>
   <p><strong>Title </strong><%= mentor.title %></p> 
