go to stundet and mentors button added to index views

--- a/app/views/mentors/index.html.erb
+++ b/app/views/mentors/index.html.erb
@@ -1,4 +1,5 @@
-<p><strong>Mentors Table</p> 
+<a href="/">Go to Stundets</a>
+<h1><strong>Mentors Table</h1> 
 
 <% @mentors.each do |mentor| %>
   <p><strong>Title </strong><%= mentor.title %></p> 
@@ -7,3 +8,5 @@
   <p><strong>Email: </strong><%= mentor.email %></p> 
   <br>
 <% end %>
+
+<a href="/">Go to Stundets</a>
