--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,3 +1,5 @@
+<a href="/mentors">Go to Mentors</a>
+<h1><strong>Students Table</h1> 
 <% @students.each do |student| %>
   <p><strong>Username: </strong><%= student.username %></p> 
   <p><strong>First Name: </strong><%= student.first_name %></p> 
@@ -5,3 +7,5 @@
   <p><strong>Email: </strong><%= student.email %></p> 
   <br>
 <% end %>
+
+<a href="/mentors">Go to Mentors</a>
