bcrypt library installed  user and sessions models and controller created and login sign up and logout functionality added

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,3 +1,5 @@
+<%= button_to 'Log Out', logout_path, method: :get %>
+
 <a href="/mentors">Go to Mentors</a>
 <h1><strong>Students Table</h1> 
 <% @students.each do |student| %>
