--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,13 +1,16 @@
-<%= button_to 'Log Out', logout_path, method: :get %>
+<%= button_to 'Log Out', logout_path, method: :get , :class => "btn btn-primary"  %>
 
-<a href="/mentors">Go to Mentors</a>
-<h1><strong>Students Table</h1> 
-<% @students.each do |student| %>
-  <p><strong>Username: </strong><%= student.username %></p> 
-  <p><strong>First Name: </strong><%= student.first_name %></p> 
-  <p><strong>Last Name: </strong><%= student.last_name %></p> 
-  <p><strong>Email: </strong><%= student.email %></p> 
-  <br>
-<% end %>
+<div class="container" style="text-align:center; margin-top:100px;">
+  <a href="/mentors">Go to Mentors</a>
+  <h1><strong>Students Table</h1> 
+  <% @students.each do |student| %>
+    <p><strong>Username: </strong><%= student.username %></p> 
+    <p><strong>First Name: </strong><%= student.first_name %></p> 
+    <p><strong>Last Name: </strong><%= student.last_name %></p> 
+    <p><strong>Email: </strong><%= student.email %></p> 
+    <br>
+  <% end %>
 
-<a href="/mentors">Go to Mentors</a>
+  <a href="/mentors">Go to Mentors</a>
+
+</div>
