--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,8 @@
     <%= form_for @user  do |f| %>  
         <%= f.label :username%><br>  
         <%= f.text_field :username%><br>  
+        <%= f.label :email%><br>  
+        <%= f.text_field :email%><br>  
         <%= f.label :password%><br>  
         <%= f.password_field :password%><br>  
         <%= f.submit %>
