stuff view student controller and seeds file edited

--- a/app/views/mentors/index.html.erb
+++ b/app/views/mentors/index.html.erb
@@ -1,18 +1,38 @@
 <%= button_to 'Log Out', logout_path, method: :get , :class => "btn btn-primary"  %>
 
 <div class="container" style="text-align:center; margin-top:100px;">
-    <a href="/">Go to Stundets</a>
-    <a href="/stuff">Go to Stuff</a>
-    <h1><strong>Mentors Table</h1> 
-    <% @mentors.each do |mentor| %>
-      <p><strong>Title </strong><%= mentor.title %></p> 
-      <p><strong>User Name: </strong><%= mentor.user.username %></p> 
-      <p><strong>First Name: </strong><%= mentor.first_name %></p> 
-      <p><strong>Last Name: </strong><%= mentor.last_name %></p> 
-      <p><strong>Email:  </strong><%= mentor.user.email %></p> 
-      <br>
-    <% end %>
+  <a href="/stuff">Go to Stuff</a>
+  <a href="/">Go to Students</a>
 
-    <a href="/">Go to Stundets</a>
-    <a href="/stuff">Go to Stuff</a>
+  <div class="col-lg-12" >
+  <h1><strong>Mentors Table</h1> 
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">User ID</th>
+        <th scope="col">Title</th>
+        <th scope="col">User Name</th>
+        <th scope="col">Furst Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Role</th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @mentors.each do |mentor| %>
+      <tr>
+        <th scope="row">1</th>
+        <td><%= mentor.user.id %></td>
+        <td><%= mentor.user.username %></td>
+        <td></strong><%= mentor.title %></td>
+        <td></strong><%= mentor.first_name %></td>
+        <td><%= mentor.last_name %></td>
+        <td><%= mentor.user.email %></td>
+        <td><%= mentor.user.role %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+</div>
 </div>
