--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,18 +1,46 @@
 <%= button_to 'Log Out', logout_path, method: :get , :class => "btn btn-primary"  %>
 
+
+
 <div class="container" style="text-align:center; margin-top:100px;">
-  <a href="/mentors">Go to Mentors</a>
-  <a href="/stuff">Go to Stuff</a>
-  <h1><strong>Students Table</h1> 
-  <% @students.each do |student| %>
-    <p><strong>User Name: </strong><%= student.user.username %></p> 
-    <p><strong>First Name: </strong><%= student.first_name %></p> 
-    <p><strong>Last Name: </strong><%= student.last_name %></p> 
-    <p><strong>Email: </strong><%= student.user.email %></p> 
-    <br>
-  <% end %>
+      <a href="/mentors">Go to Mentors</a>
+      <a href="/stuff">Go to Stuff</a>
 
-  <a href="/mentors">Go to Mentors</a>
-  <a href="/stuff">Go to Stuff</a>
+      <div class="col-lg-12" >
+          <h1><strong>Students Table</h1> 
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">User ID</th>
+                <th scope="col">User Name</th>
+                <th scope="col">Furst Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Role</th>
+              </tr>
+            </thead>
+            <tbody>
+            <% @students.each do |student| %>
+              <tr>
+                <th scope="row">1</th>
+                <td><%= student.user.id %></td>
+                <td><%= student.user.username %></td>
+                <td></strong><%= student.first_name %></td>
+                <td><%= student.last_name %></td>
+                <td><%= student.user.email %></td>
+                <td><%= student.user.role %></td>
+              </tr>
+            <% end %>
+            </tbody>
+          </table>
+      </div>
+  </div>
 
-</div>
+
+
+
+
+
+
+
