--- a/app/views/stuff/index.html.erb
+++ b/app/views/stuff/index.html.erb
@@ -3,18 +3,37 @@
 <div class="container" style="text-align:center; margin-top:100px;">
   <a href="/mentors">Go to Mentors</a>
   <a href="/">Go to Students</a>
+
+  <div class="col-lg-12" >
   <h1><strong>Stuff Table</h1> 
-  <% @stuff.each do |stuff| %>
-    <p><strong>Title: </strong><%= stuff.title %></p> 
-    <p><strong>Username: </strong><%= stuff.user.username %></p> 
-    <p><strong>First Name: </strong><%= stuff.first_name %></p> 
-    <p><strong>Last Name: </strong><%= stuff.last_name %></p> 
-    <p><strong>Email: </strong><%= stuff.user.email %></p> 
-    <br>
-  <% end %>
-
-  <a href="/mentors">Go to Mentors</a>
-  <a href="/">Go to Students</a>
-
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">User ID</th>
+        <th scope="col">Title</th>
+        <th scope="col">User Name</th>
+        <th scope="col">Furst Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Role</th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @stuff.each do |stuff| %>
+      <tr>
+        <th scope="row">1</th>
+        <td><%= stuff.user.id %></td>
+        <td><%= stuff.user.username %></td>
+        <td></strong><%= stuff.title %></td>
+        <td></strong><%= stuff.first_name %></td>
+        <td><%= stuff.last_name %></td>
+        <td><%= stuff.user.email %></td>
+        <td><%= stuff.user.role %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+</div>
 </div>
 
