--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,7 +5,7 @@
 <div class="container" style="text-align:center; margin-top:100px;">
       <a href="/mentors">Go to Mentors</a>
       <a href="/stuff">Go to Stuff</a>
-
+      <a href="/users">Show  All Users</a>
       <div class="col-lg-12" >
           <h1><strong>Students Table</h1> 
           <table class="table">
@@ -14,7 +14,7 @@
                 <th scope="col">#</th>
                 <th scope="col">User ID</th>
                 <th scope="col">User Name</th>
-                <th scope="col">Furst Name</th>
+                <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
                 <th scope="col">Email</th>
                 <th scope="col">Role</th>
@@ -24,21 +24,24 @@
             <% @students.each do |student| %>
               <tr>
                 <th scope="row">1</th>
-                <td><%= student.user.id %></td>
+                <td><%= student.user_id %></td>
                 <td><%= student.user.username %></td>
                 <td></strong><%= student.first_name %></td>
                 <td><%= student.last_name %></td>
                 <td><%= student.user.email %></td>
                 <td><%= student.user.role %></td>
+                <td><%= link_to 'Show', student %></td>
+                <td><%= link_to 'Edit', edit_student_path(student) %></td>
+                <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>        
               </tr>
             <% end %>
             </tbody>
           </table>
       </div>
   </div>
-
-
-
+<div style="text-align:center;">
+  <%= link_to 'Add New Student', new_student_path %>
+</div>
 
 
 
