--- a/app/views/stuff/index.html.erb
+++ b/app/views/stuff/index.html.erb
@@ -13,7 +13,7 @@
         <th scope="col">User ID</th>
         <th scope="col">Title</th>
         <th scope="col">User Name</th>
-        <th scope="col">Furst Name</th>
+        <th scope="col">First Name</th>
         <th scope="col">Last Name</th>
         <th scope="col">Email</th>
         <th scope="col">Role</th>
