Stuff table changed to staff table and stuff typoes edited

--- a/app/views/mentors/index.html.erb
+++ b/app/views/mentors/index.html.erb
@@ -1,7 +1,7 @@
 <%= button_to 'Log Out', logout_path, method: :get , :class => "btn btn-primary"  %>
 
 <div class="container" style="text-align:center; margin-top:100px;">
-  <a href="/stuff">Go to Stuff</a>
+  <a href="/staff">Go to Staff</a>
   <a href="/">Go to Students</a>
 
   <div class="col-lg-12" >
