--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container" style="text-align:center; margin-top:100px;">
       <a href="/mentors">Go to Mentors</a>
-      <a href="/stuff">Go to Stuff</a>
+      <a href="/staff">Go to Staff</a>
       <a href="/users">Show  All Users</a>
       <div class="col-lg-12" >
           <h1><strong>Students Table</h1> 
