--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -11,10 +11,11 @@
 <tbody>
 <% @assignments.each do |assignment| %>
     <tr>
-    <th scope="row">1</th>
-    <td><%= assignment.name %></td>
-    <td><%= assignment.github_url %></td>
-    <td><%= assignment.status %></td></tr>
+        <th scope="row"><%= assignment.id %></th>
+        <td><%= assignment.name %></td>
+        <td><%= assignment.github_url %></td>
+        <td><%= assignment.status %></td>
+    </tr>
 <% end %>
 </tbody>
 </table>
