--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -1,5 +1,5 @@
     <h1>New Assignment</h1>   
-    <%= form_for(@assignment) do |f| %>   
+    <%= form_for @assignment  do |f| %>   
         <%= f.label :name%>
         <%= f.text_field :name %> <br>  
         <%= f.label :github_url%>
